--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "cannon-es": "^0.19.0",
+    "cannon-es-debugger": "^0.1.4",
     "phaser": "^3.50.0",
     "phaser3-rex-plugins": "^1.1.67",
     "three": "^0.140.0"
